# litevLLM

./: .gitignore  .pre-commit-config.yaml  .tmp_perf_gemma_1024.json  .tmp_perf_regression_awq_from_accuracy_suite.json  .tmp_perf_regression_baseline.json  .tmp_perf_regression_post_fix.json  CLAUDE.md  CMakeLists.txt  GEMINI.md  Mockups  README.md  TRITON_MIGRATION.md  benchmark.py  check_awq_load.py  continous_batch.txt  pyproject.toml  setup.py  verify_triton.py
.github/workflows/: smoke.yml
benchmarks/: README.md  backend_request_func.py  benchmark_block_pool.py  benchmark_ngram_proposer.py  benchmark_triton_rms_norm.py  deepseek_v4_flash_batched_generate.py  sampling_driver_microbenchmark.py
benchmarks/attention_benchmarks/: runner.py
benchmarks/fused_kernels/: layernorm_rms_benchmarks.py
benchmarks/kernels/: bench_block_fp8_gemm.py  bench_fp8_gemm.py  bench_int8_gemm.py  bench_mxfp4_qutlass.py  bench_nvfp4_gemm.py  bench_nvfp4_quant.py  bench_nvfp4_qutlass.py  bench_per_token_quant_fp8.py  benchmark_2d_silu_mul_fp8_quant.py  benchmark_awq_fused_gemm_batched.py  benchmark_cutlass_moe_fp8.py  benchmark_cutlass_moe_nvfp4.py  benchmark_device_communicators.py  benchmark_fused_collective.py  benchmark_fused_prefill.py  benchmark_fused_topk.py  benchmark_gemma4_moe_26b.py  benchmark_grouped_gemm_cutlass.py  benchmark_lora.py  benchmark_machete.py  benchmark_marlin.py  benchmark_moe.py  benchmark_moe_align_block_size.py  benchmark_moe_permute_unpermute.py  benchmark_per_token_group_quant.py  benchmark_reshape_and_cache_flash.py  benchmark_silu_mul_fp8_quant.py  benchmark_w8a8_block_fp8.py
benchmarks/multi_turn/: benchmark_serving_multi_turn.py
docs/: .nav.yml  API_REFERENCE.md  ARCHITECTURE_LITE.md  AWQ_POLICY_MATRIX.md  CAPABILITY_MATRIX.md  DELIVERY_STATUS.md  DEPENDENCY_CLOSURE.md  GEMMA4_31B_P0_AWQ_AUDIT.md  GEMMA4_31B_P1_WRAPUP.md  GEMMA4_31B_P2_MLP_STREAMING.md  GEMMA4_31B_P3A_AWQ_INTERLEAVED_LAYOUT.md  GEMMA4_31B_PERF_WRAPUP.md  GEMMA4_31B_PHASE1_TOP3_EXECUTION.md  GEMMA4_31B_QKV_FUSED_TUNING.md  INFERENCE_ACCURACY.md  LITE_ONLY_STATUS.md  PLAN_90_DAY_TRANSFORMATION.md  QWEN35_35B_MOE_GGUF_MEASUREMENT_REPORT.md  README.md  ROCM_CI_RUNNER.md  STABILITY_WORK_SUMMARY.md  TECH_DEEP_DIVE_CONCURRENCY.md  performance_evaluation_deepseek_v4_flash_2026_07_08.md  performance_evaluation_gemma4_deepseek_2026_07_07.md
docs/contributing/: README.md  profiling.md
docs/deployment/: docker.md  k8s.md  nginx.md
docs/design/: STRIX_POINT_CASE_STUDY.md  STRIX_POINT_OPTIMIZATION_REPORT.md  ai-pc-multi-agent-runtime-strategy.md  deepseek_v4_flash_q2_native.md  gemma4-12b-verified-batch-envelope.md  runtime-hardening-and-serving-correctness.md
docs/features/: lora.md  multimodal_inputs.md  structured_outputs.md  tool_calling.md
docs/getting_started/: quickstart.md
docs/models/: supported_models.md
docs/serving/: openai_compatible_server.md
docs/usage/: faq.md  troubleshooting.md
examples/offline_inference/: async_llm_streaming.py  data_parallel.py  metrics.py  prefix_caching.py  rlhf.py  rlhf_online_quant.py  spec_decode.py  structured_outputs.py  vision_language.py  vision_language_multi_image.py
examples/online_serving/: api_client.py  kv_events_subscriber.py  multi_instance_data_parallel.py  openai_chat_completion_client_for_multimodal.py  prompt_embed_inference_with_openai_client.py
examples/others/: tensorize_vllm_model.py
requirements/: nightly_torch_test.txt  test.in
scripts/: README.md  check_lite_imports.sh  quality_bar_spotcheck.py  qwen35_chunk_gated_delta_alignment.py  qwen35_gated_delta_conv_alignment.py  qwen35_gguf_alignment_audit.py  qwen35_moe_packed_lite_logits_audit.py  report_expected_alignment_metrics.py  run_inference_quality_suite.sh  verify_qwen35_final_hidden_alignment.py
scripts/fixtures/: qwen35_spotcheck_user_line.txt
tests/: README.md  TOOLS_REFERENCE_AUDIT.md  accuracy_report.py  bench_awq_fused_gemm_ab.py  benchmark_awq_fused.py  benchmark_moe.py  benchmark_moe_eager.py  e2e_awq_full_model_perf.py  e2e_deepseek_v2_lite_perf.py  e2e_ds_v2_lite_fp8_perf.py  e2e_full_benchmark.py  e2e_gguf_perf.py  e2e_glm_4_7_perf.py  e2e_glm_fp8_perf.py  e2e_glm_perf.py  e2e_kimi_limit_test.py  e2e_lora_batch_scaling.py  e2e_lora_perf.py  e2e_moe_batch_scaling.py  e2e_moe_lora_perf.py  e2e_multi_lora_perf.py  e2e_multimodal_perf.py  e2e_next_gen_perf.py  e2e_perf_benchmark.py  e2e_qwen3_5_awq_perf.py  e2e_qwen3_5_long_ctx_perf.py  e2e_qwen3_5_perf.py  e2e_qwen_fp8_perf.py  e2e_qwen_moe_perf.py  e2e_tinyllama_load.py  final_integration_test.py  final_performance_regression.py  full_perf_regression.py  full_regression_suite.py  lite_awq_perf_test.py  lite_lora_perf_test.py  lite_moe_perf_test.py  lite_perf_test.py  lite_smoke_test.py  moe_lora_batch_scaling.py  (+156 more)
tests/basic_correctness/: test_basic_correctness.py
tests/deepseek_v4_flash/: fixtures.py  test_adapter_registry.py  test_async_llm_direct_reference.py  test_attention_mapping.py  test_attention_reference.py  test_block_reference.py  test_compressed_attention_contract.py  test_compressed_kv.py  test_compressed_kv_runtime.py  test_config_builder.py  test_config_memory.py  test_decode_graph.py  test_deepseek_q2_iq2_kernel_profile.py  test_direct_decode_real_smoke.py  test_engine_batched.py  test_executors.py  test_expert_cache_policy.py  test_expert_prefetch.py  test_gguf_reader.py  test_gpu_backend_contract.py  test_gpu_batched_compressed_layers.py  test_gpu_batched_hyper_connections.py  test_gpu_batched_layers.py  test_gpu_batched_projections.py  test_gpu_compressed_attention.py  (+35 more)
tmp/: architecture_evaluation.md
vllm/: __init__.py  _aiter_ops.py  _bc_linter.py  _custom_ops.py  _ipex_ops.py  beam_search.py  collect_env.py  connections.py  cudagraph_dispatcher.py  env_override.py  envs.py  exceptions.py  forward_context.py  kv_cache_interface.py  logger.py  logits_process.py  logprobs.py  model_inspection.py  outputs.py  pooling_params.py  request.py  sampling_params.py  scalar_type.py  scripts.py  sequence.py  serial_utils.py  tasks.py  tracing.py  v1_outputs.py  v1_utils.py  version.py
(+903 files in other folders)
