[project]
name = "fastinference"
version = "0.1.0"
description = "High-performance inference engine for GGUF models with FP8 acceleration"
dependencies = [
    "torch",
    "numpy",
    "triton",
    "transformers",
    "safetensors",
    "huggingface-hub",
    "fastapi",
    "uvicorn",
    "gguf",
]

[tool.setuptools]
packages = ["vllm"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
]
