[build-system]
# Should be mirrored in requirements/build.txt
requires = [
    "packaging",
    "setuptools",
    "setuptools-scm",
    "torch",
    "triton",
    "wheel",
    "jinja2",
]
build-backend = "setuptools.build_meta"

[project]
name = "vllm"
dynamic = ["version"]
authors = [{name = "vLLM Team"}]
license = {text = "Apache-2.0"}
readme = "README.md"
description = "A high-throughput and memory-efficient inference and serving engine for LLMs"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = "==3.12.*"
dependencies = [
    "torch",
    "triton",
    "transformers >= 4.56.0, < 5",
    "tokenizers >= 0.21.1",
    "numpy",
    "requests >= 2.26.0",
    "tqdm",
    "pyyaml",
    "pillow",
    "pydantic >= 2.12.0",
    "fastapi[standard] >= 0.115.0",
    "aiohttp",
    "openai >= 1.99.1",
    "prometheus_client >= 0.18.0",
    "einops",
    "compressed-tensors == 0.13.0",
    "msgspec",
    "ninja",
    "sentencepiece",
    "psutil",
    "peft",
    "datasets",
    "timm>=1.0.17",
    "numba == 0.61.2",
    "torchvision == 0.24.0",
    "gguf>=0.17.1",
    "cloudpickle",
    "cbor2",
    "pyzmq",
    "pybase64",
    "cachetools",
    "py-cpuinfo",
    "uvloop",
    "openai-harmony",
    "outlines-core",
    "outlines >= 0.1.1",
    "xgrammar",
    "lm-format-enforcer",
    "partial-json-parser",
    "llguidance",
    "typing-extensions",
    "filelock",
    "mistral-common >= 1.5.0",
    "tiktoken",
    "amdsmi",
]

[project.urls]
Homepage="https://github.com/vllm-project/vllm"
Documentation="https://docs.vllm.ai/en/latest/"
Slack="https://slack.vllm.ai/"

[project.scripts]
vllm = "vllm.entrypoints.cli.main:main"

[project.entry-points."vllm.general_plugins"]
lora_filesystem_resolver = "vllm.plugins.lora_resolvers.filesystem_resolver:register_filesystem_resolver"
lora_hf_hub_resolver = "vllm.plugins.lora_resolvers.hf_hub_resolver:register_hf_hub_resolver"

[tool.setuptools_scm]
# no extra settings needed, presence enables setuptools-scm

[tool.setuptools.packages.find]
where = ["."]
include = ["vllm*"]

[tool.ruff.lint.per-file-ignores]
"vllm/third_party/**" = ["ALL"]
"vllm/version.py" = ["F401"]
"vllm/_version.py" = ["ALL"]
# Exclude generated protobuf files
"vllm/grpc/*_pb2.py" = ["ALL"]
"vllm/grpc/*_pb2_grpc.py" = ["ALL"]
"vllm/grpc/*_pb2.pyi" = ["ALL"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-logging-format
    "G",
]
ignore = [
    # star imports
    "F405", "F403",
    # lambda expression assignment
    "E731",
    # zip without `strict=`
    "B905",
    # Loop control variable not used within loop body
    "B007",
    # f-string format
    "UP032",
]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
plugins = ['pydantic.mypy']
ignore_missing_imports = true
check_untyped_defs = true
follow_imports = "silent"

[tool.pytest.ini_options]
markers = [
    "slow_test",
    "skip_global_cleanup",
    "core_model: enable this model test in each PR instead of only nightly",
    "hybrid_model: models that contain mamba layers (including pure SSM and hybrid architectures)",
    "cpu_model: enable this model test in CPU tests",
    "cpu_test: mark test as CPU-only test",
    "split: run this test as part of a split",
    "distributed: run this test only in distributed GPU tests",
    "skip_v1: do not run this test with v1",
    "optional: optional tests that are automatically skipped, include --optional to run them",
]

[tool.ty.src]
root = "./vllm"
respect-ignore-files = true

[tool.ty.environment]
python = "./.venv"

[tool.typos.files]
# these files may be written in non english words
extend-exclude = ["tests/models/fixtures/*", "tests/prompts/*",
    "benchmarks/sonnet.txt", "tests/lora/data/*", "build/*",
    "vllm/third_party/*", "vllm/entrypoints/serve/instrumentator/static/*", 
    "docs/governance/process.md"]
ignore-hidden = true
ignore-files = true
ignore-dot = true
ignore-vcs = true
ignore-global = true
ignore-parent = true

[tool.typos.default]
binary = false
check-filename = false
check-file = true
unicode = true
ignore-hex = true
identifier-leading-digits = false
locale = "en"
extend-ignore-identifiers-re = ["NVML_*", ".*Unc.*", ".*_thw",
    ".*UE8M0.*", ".*[UE4M3|ue4m3].*", ".*eles.*",
     ".*[Tt]h[rR].*"]
extend-ignore-words-re = []
extend-ignore-re = []

[tool.typos.default.extend-identifiers]
bbc5b7ede = "bbc5b7ede"
womens_doubles = "womens_doubles"
v_2nd = "v_2nd"
# splitted_input = "splitted_input"
NOOPs = "NOOPs"
typ = "typ"
nin_shortcut = "nin_shortcut"
UperNetDecoder = "UperNetDecoder"
subtile = "subtile"
cudaDevAttrMaxSharedMemoryPerBlockOptin = "cudaDevAttrMaxSharedMemoryPerBlockOptin"
SFOuput = "SFOuput"
# huggingface transformers repo uses these words
depthwise_seperable_out_channel = "depthwise_seperable_out_channel"
DepthWiseSeperableConv1d = "DepthWiseSeperableConv1d"
depthwise_seperable_CNN = "depthwise_seperable_CNN"

[tool.typos.default.extend-words]
iy = "iy"
tendencias = "tendencias"
indx = "indx"
# intel cpu features
tme = "tme"
dout = "dout"
Pn = "Pn"
arange = "arange"

[tool.typos.type.py]
extend-glob = []
extend-ignore-identifiers-re = []
extend-ignore-words-re = []
extend-ignore-re = []

[tool.typos.type.py.extend-identifiers]
arange = "arange"
NDArray = "NDArray"
EOFError = "EOFError"
fo = "fo"
ba = "ba"

[tool.typos.type.py.extend-words]
ba = "ba"
nd = "nd"

[tool.typos.type.cpp]
extend-glob = ["*.cu"]
extend-ignore-identifiers-re = []
extend-ignore-words-re = []
extend-ignore-re = []

[tool.typos.type.cpp.extend-identifiers]
countr_one = "countr_one"
k_ot = "k_ot"
ot = "ot"

[tool.typos.type.cpp.extend-words]

[tool.typos.type.rust]
extend-glob = []
extend-ignore-identifiers-re = []
extend-ignore-words-re = []
extend-ignore-re = []

[tool.typos.type.rust.extend-identifiers]
flate2 = "flate2"

[tool.typos.type.rust.extend-words]
ser = "ser"

[tool.typos.type.lock]
extend-glob = []
check-file = false
extend-ignore-identifiers-re = []
extend-ignore-words-re = []
extend-ignore-re = []

[tool.typos.type.lock.extend-identifiers]

[tool.typos.type.lock.extend-words]

[tool.typos.type.jl]
extend-glob = []
extend-ignore-identifiers-re = []
extend-ignore-words-re = []
extend-ignore-re = []

[tool.typos.type.jl.extend-identifiers]

[tool.typos.type.jl.extend-words]
modul = "modul"
egals = "egals"
usig = "usig"
egal = "egal"

[tool.typos.type.go]
extend-glob = []
extend-ignore-identifiers-re = []
extend-ignore-words-re = []
extend-ignore-re = []

[tool.typos.type.go.extend-identifiers]
flate = "flate"

[tool.typos.type.go.extend-words]

[tool.typos.type.css]
extend-glob = []
extend-ignore-identifiers-re = []
extend-ignore-words-re = []
extend-ignore-re = []

[tool.typos.type.css.extend-identifiers]
nd = "nd"

[tool.typos.type.css.extend-words]

[tool.typos.type.man]
extend-glob = []
extend-ignore-identifiers-re = []
extend-ignore-words-re = []
extend-ignore-re = []

[tool.typos.type.man.extend-identifiers]
Nd = "Nd"

[tool.typos.type.man.extend-words]

[tool.typos.type.cert]
extend-glob = []
check-file = false
extend-ignore-identifiers-re = []
extend-ignore-words-re = []
extend-ignore-re = []

[tool.typos.type.cert.extend-identifiers]

[tool.typos.type.cert.extend-words]

[tool.typos.type.sh]
extend-glob = []
extend-ignore-identifiers-re = []
extend-ignore-words-re = []
extend-ignore-re = []

[tool.typos.type.sh.extend-identifiers]
ot = "ot"

[tool.typos.type.sh.extend-words]

[tool.typos.type.vimscript]
extend-glob = []
extend-ignore-identifiers-re = []
extend-ignore-words-re = []
extend-ignore-re = []

[tool.typos.type.vimscript.extend-identifiers]
windo = "windo"

[tool.typos.type.vimscript.extend-words]

[tool.uv]
no-build-isolation-package = ["torch"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
# Linux ROCm 7.1 support - use AMD official wheels for AI Max+395
# Source: https://repo.radeon.com/rocm/manylinux/rocm-rel-7.1/
# These wheels support AMD AI Max+395 with ROCm 7.1
# Using actual filenames found in AMD repository
# Found via: ./scripts/find_pytorch_wheels.sh
torch = [
  { url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-7.1/torch-2.9.1+rocm7.1.0.lw.git351ff442-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" },
  { index = "pytorch", marker = "sys_platform != 'linux'" }
]
torchvision = [
  { url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-7.1/torchvision-0.24.0+rocm7.1.0.gitb919bd0c-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" },
  { index = "pytorch", marker = "sys_platform != 'linux'" }
]
torchaudio = [
  { url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-7.1/torchaudio-2.9.0+rocm7.1.0.gite3c6ee2b-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" },
  { index = "pytorch", marker = "sys_platform != 'linux'" }
]
# triton is a dependency of torch, add it explicitly
# Note: triton may need to be added to dependencies list if torch requires it
triton = [
  { url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-7.1/triton-3.5.1+rocm7.1.0.gita272dfa8-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" },
]
